NEXT-1046 - Fix Order module after recent changes and misc fixes.

--- a/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document-card.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document-card.html.twig
@@ -1,19 +1,17 @@
 <sw-card :title="$tc('sw-order.documentCard.cardTitle')"
          class="sw-order-document-card"
-         :isLoading="isLoading || documentLoading">
-
+         :isLoading="isLoading || documentsLoading || cardLoading">
     <template slot="grid">
     <sw-card-section divider="bottom" secondary slim>
         <sw-card-filter :placeholder="$tc('sw-order.documentCard.searchBarPlaceholder')"
-                @sw-card-filter-term-change="onSearchTermChange">
+            @sw-card-filter-term-change="onSearchTermChange">
             <template slot="filter">
                 <sw-context-button>
                     <sw-button slot="button"
-                               class="sw-order-document-grid-button sw-button--small">
+                        class="sw-order-document-grid-button sw-button--small">
                         Neu erstellen
                     </sw-button>
                     <template v-for="documentType in documentTypes">
-                        {#<sw-context-menu-item class="sw-order-list__order-view-action" @click="createDocument(order.id, documentType.id)">#}
                         <sw-context-menu-item class="sw-order-list__order-view-action" @click="onPrepareDocument(documentType)">
                             {{ documentType.name }}
                         </sw-context-menu-item>
@@ -22,71 +20,61 @@
             </template>
         </sw-card-filter>
     </sw-card-section>
-    <sw-grid
-            v-if="documents.length > 0"
-            :items="documents"
-            :selectable="true"
-            table>
-
+    <sw-grid v-if="documents.length > 0"
+        :items="documents"
+        :selectable="true"
+        table>
         <template slot="columns" slot-scope="{ item }">
-
             <sw-grid-column flex="minmax(100px, 180px)"
-                            :label="$tc('sw-order.documentCard.labelDate')"
-                            dataIndex="item.createdAt"
-                            truncate>
+                :label="$tc('sw-order.documentCard.labelDate')"
+                dataIndex="item.createdAt"
+                truncate>
                 {{ item.createdAt | date({year: '2-digit', hour:'2-digit', minute:'2-digit'}) }}
             </sw-grid-column>
-
             <sw-grid-column flex="minmax(100px, 1fr)"
-                            :label="$tc('sw-order.documentCard.labelNumber')"
-                            dataIndex="item.id"
-                            truncate>
+                :label="$tc('sw-order.documentCard.labelNumber')"
+                dataIndex="item.id"
+                truncate>
                 {{ item.config.documentNumber }}
             </sw-grid-column>
-
             <sw-grid-column flex="minmax(100px, 1fr)"
-                            :label="$tc('sw-order.documentCard.labelType')"
-                            dataIndex="item.documentType.name"
-                            truncate>
+                :label="$tc('sw-order.documentCard.labelType')"
+                dataIndex="item.documentType.name"
+                truncate>
                 {{ item.documentType.name }}
             </sw-grid-column>
-
             <sw-grid-column flex="minmax(100px, 1fr)"
-                            :label="$tc('sw-order.documentCard.labelSent')"
-                            dataIndex="item.sent"
-                            truncate>
-                <sw-icon name="small-default-checkmark-line-medium"
-                         small
-                         v-if="item.sent"
-                         class="is--active">
+                    :label="$tc('sw-order.documentCard.labelSent')"
+                    dataIndex="item.sent"
+                    truncate>
+                <sw-icon v-if="item.sent"
+                    name="small-default-checkmark-line-medium"
+                    small>
                 </sw-icon>
-                <sw-icon name="small-default-x-line-medium"
-                         small
-                         v-else
-                         class="is--active">
+                <sw-icon v-else
+                    name="small-default-x-line-medium"
+                    small>
                 </sw-icon>
             </sw-grid-column>
             <sw-grid-column flex="minmax(70px, 70px)"
-                            align="center">
+                align="center">
                 <sw-context-button>
-
                     <sw-context-menu-item>
                         <a class="sw-document-download-button" :href="documentService.generateDocumentLink(item.id,item.deepLinkCode)" target="_blank">
                             {{ $tc('sw-order.documentCard.labelDownloadPdf') }}
                         </a>
                     </sw-context-menu-item>
-
                 </sw-context-button>
             </sw-grid-column>
         </template>
     </sw-grid>
     </template>
-
-    <component :is="documentModal" v-if="showModal"
-                                           :currentDocumentType="currentDocumentType"
-                                           :order="order"
-                                           @document-modal-leave-page="onCancelModal"
-                                           @document-modal-create-document="onCreateDocument"
-                                           @document-modal-show-preview="onPreview">
+    <component v-if="showModal"
+        :is="documentModal"
+        :currentDocumentType="currentDocumentType"
+        :order="order"
+        @document-modal-leave-page="onCancelCreation"
+        @document-modal-create-document="onCreateDocument"
+        @document-modal-show-preview="onPreview">
     </component>
 </sw-card>
