--- a/Resources/administration/src/module/sw-order/component/sw-order-document-settings-storno-modal/sw-order-document-settings-storno-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-settings-storno-modal/sw-order-document-settings-storno-modal.html.twig
@@ -9,22 +9,19 @@
                         v-model="documentConfig.custom.invoiceNumber"
                          :placeholder="$tc('sw-order.documentModal.selectInvoiceNumber')"
                         @change="onSelectInvoice">
-            <slot>
-                <option v-for="number in invoiceNumbers" :value="number">
-                    {{ number }}
-                </option>
-            </slot>
+            <option v-for="number in invoiceNumbers" :value="number">
+                {{ number }}
+            </option>
         </sw-select-field>
     {% endblock %}
 
         {% block sw_order_document_settings_modal_form_document_date %}
             <sw-datepicker
-                    v-if="documentConfig.documentDate"
-                    dateType="date"
-                    :label="$tc('sw-order.documentModal.labelDocumentDate')"
-                    :value="documentConfig.documentDate"
-                    v-model="documentConfig.documentDate"
-            >
+                v-if="documentConfig.documentDate"
+                dateType="date"
+                :label="$tc('sw-order.documentModal.labelDocumentDate')"
+                :value="documentConfig.documentDate"
+                v-model="documentConfig.documentDate">
             </sw-datepicker>
         {% endblock %}
 {% endblock %}
