NEXT-2707 - Fix UI Behaviour of snippets

--- a/Resources/administration/src/module/sw-settings-snippet/component/sidebar/sw-settings-snippet-sidebar/sw-settings-snippet-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/component/sidebar/sw-settings-snippet-sidebar/sw-settings-snippet-sidebar.html.twig
@@ -28,10 +28,20 @@
 
                 {% block sw_settings_snippet_grid_sidebar_filter_custom %}
                     <sw-settings-snippet-boolean-filter-item
-                            name="customSnippets"
-                            group="customSnippets"
+                            name="editedSnippets"
+                            group="editedSnippets"
                             type="small"
                             :label="$tc('sw-settings-snippet.filter.showOnlyCustom')"
+                            @change="onChange">
+                    </sw-settings-snippet-boolean-filter-item>
+                {% endblock %}
+
+                {% block sw_settings_snippet_grid_sidebar_filter_added %}
+                    <sw-settings-snippet-boolean-filter-item
+                            name="addedSnippets"
+                            group="addedSnippets"
+                            type="small"
+                            :label="$tc('sw-settings-snippet.filter.showOnlyAdded')"
                             @change="onChange">
                     </sw-settings-snippet-boolean-filter-item>
                 {% endblock %}
