--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
@@ -52,7 +52,7 @@
                                                   :placeholder="$tc('sw-settings-snippet.detail.labelNamePlaceholder')"
                                                   v-model="translationKey"
                                                   @input="onChange"
-                                                  :disabled="!(isCreate || isCustomState)"
+                                                  :disabled="!(isCreate || isAddedSnippet)"
                                                   :errorMessage="invalidKeyErrorMessage">
                                         </sw-field>
                                     {% endblock %}
