--- a/Resources/administration/src/module/sw-settings-user/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-user/extension/sw-settings-index/sw-settings-index.html.twig
@@ -2,7 +2,7 @@
     {% parent %}
 
     {% block sw_settings_tax_item %}
-        <sw-settings-item :label="$tc('sw-settings-user.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.user.list' }">
+        <sw-settings-item id="sw-settings-user" :label="$tc('sw-settings-user.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.user.list' }">
             <template slot="icon">
                 <svg width="80px" height="80px" viewBox="0 0 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
