--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-variants/sw-product-detail-variants.html.twig
@@ -1,11 +1,11 @@
 <div class="sw-product-detail-variants">
-    <sw-card class="sw-card__configurator" :title="$tc('sw-product.variations.configuratorCardTitle')">
+    <sw-card class="sw-card__configurator" :title="$tc('sw-product.options.configuratorCardTitle')">
         <sw-product-variants-configurator-selection
                 :product="product"
                 :options="configuratorStore"
                 :overlay="false"
                 :collapsible="false"
-                @variationsGenerated="updateVariations">
+                @variationssGenerated="updateVariations">
         </sw-product-variants-configurator-selection>
     </sw-card>
 
