NEXT-2639 - Rename product_datasheet to product_property

--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-properties/sw-product-detail-properties.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-properties/sw-product-detail-properties.html.twig
@@ -1,5 +1,5 @@
 <div class="sw-product-detail-properties">
     <sw-card :title="$tc('sw-product.properties.cardTitleProperties')">
-        <sw-property-assignment :options="datasheetStore" />
+        <sw-property-assignment :options="propertiesStore" />
     </sw-card>
 </div>
