--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.scss
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.scss
@@ -1,6 +1,5 @@
 .sw-settings-shipping-detail {
-    .sw-field.sw-field--checkbox {
-        align-self: center;
-        margin: 0;
+    .sw-settings-shipping-detail__description textarea {
+        min-height: 148px;
     }
 }
