--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.scss
@@ -15,7 +15,7 @@ $sw-condition-or-container-border: #788A9B;
     }
 
     .sw-condition-or-container__condition-content {
-        padding: 32px;
+        padding: 32px 32px 16px 32px;;
     }
 
     .condition-content__spacer--or {
